syntax = "proto3";

package iprs.migration.v1;

import "iprs/migration/v1/migration.proto";

option java_multiple_files = true;

message RecordMovementCmd {
  string id =1;
  Movement template =2;
}

message UpdateMovementCmd {
  string id =1;
  Movement template =2;
}

service MigrationService {
  rpc RecordMovement(RecordMovementCmd) returns (RecordMovementCmd) {}
  rpc UpdateMovement(UpdateMovementCmd) returns (UpdateMovementCmd) {}
}